--- a/关于-about/index.html
+++ b/关于-about/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-    <head><meta charset='utf-8'>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="关于我和这个博客">
 <title>关于 | About</title>
 
-<link rel='canonical' href='https://muioo.github.io/%E5%85%B3%E4%BA%8E-about/'>
+<link rel='canonical' href='http://localhost:1313/%E5%85%B3%E4%BA%8E-about/'>
 
 <link rel="stylesheet" href="/scss/style.min.2255cb2df767d30be0937aebf1bccb8714db2a3253c5b26bc9311112cbf2078b.css"><meta property='og:title' content="关于 | About">
 <meta property='og:description' content="关于我和这个博客">
-<meta property='og:url' content='https://muioo.github.io/%E5%85%B3%E4%BA%8E-about/'>
+<meta property='og:url' content='http://localhost:1313/%E5%85%B3%E4%BA%8E-about/'>
 <meta property='og:site_name' content='muioo blog'>
-<meta property='og:type' content='article'><meta property='article:section' content='Page' /><meta property='og:image' content='https://muioo.github.io/%E5%85%B3%E4%BA%8E-about/background1.jpg' />
+<meta property='og:type' content='article'><meta property='article:section' content='Page' /><meta property='og:image' content='http://localhost:1313/%E5%85%B3%E4%BA%8E-about/background1.jpg' />
 <meta name="twitter:title" content="关于 | About">
 <meta name="twitter:description" content="关于我和这个博客"><meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content='https://muioo.github.io/%E5%85%B3%E4%BA%8E-about/background1.jpg' />
+    <meta name="twitter:image" content='http://localhost:1313/%E5%85%B3%E4%BA%8E-about/background1.jpg' />
     <link rel="shortcut icon" href="/favicon.ico" />
 <script>
     
@@ -403,7 +403,7 @@ console.log(`\n%cLive2D%cWidget%c\n`, 'padding: 8px; background: #cd3e45; font-w
 </h2><h3 id="游戏">游戏
 </h3><h3 id="跑步">跑步
 </h3><h2 id="关于本博客">关于本博客
-</h2><p>这个博客是我使用 <strong>Hugo</strong> 静态网站生成器搭建的个人技术博客。Hugo 以其快速的构建速度和灵活的配置而闻名，非常适合搭建个人博客和文档站点。</p>
+</h2><p>这个博客是我使用 <strong>Hugo</strong> 静态网站生成器搭建的个人技术博客</p>
 <h3 id="技术实现">技术实现
 </h3><ul>
 <li><strong>静态网站生成器</strong>: Hugo</li>
@@ -492,8 +492,8 @@ console.log(`\n%cLive2D%cWidget%c\n`, 'padding: 8px; background: #cd3e45; font-w
 
     <section class="powerby"><div id="blog-stats" style="margin-bottom: 5px;" data-launch-date="2026-01-22">
             本站已稳定运行: <strong id="running-days">计算中...</strong> 天 |
-            博客: <strong>5</strong> 篇 |
-            字数: <strong>7404</strong> 字
+            博客: <strong>7</strong> 篇 |
+            字数: <strong>9228</strong> 字
         </div>使用 <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> 构建 <br />
         主题 <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="3.33.0">Stack</a></b> 由 <a href="https://jimmycai.com" target="_blank" rel="noopener">Jimmy</a> 设计
     </section>
@@ -675,7 +675,7 @@ if (typeof swup !== 'undefined') {
                 src="https://cdn.jsdelivr.net/npm/node-vibrant@3.1.6/dist/vibrant.min.js"integrity="sha256-awcR2jno4kI5X0zL8ex0vi2z&#43;KMkF24hUW8WePSA9HM="crossorigin="anonymous"
                 
                 >
-            </script><script type="text/javascript" src="/ts/main.c922af694cc257bf1ecc41c0dd7b0430f9114ec280ccf67cd2c6ad55f5316c4e.js" defer></script><script type="text/javascript" src="/ts/custom.75bd80549499cce4e49b199cc0322b9c39c3202aefc1da9a8480b5a3926a1094.js" defer></script>
+            </script><script type="text/javascript" src="/ts/main.64b08e1ea8843989c3c2601c2bd130edc19d9e5863b4dba31894b5259ddbf682.js" defer></script><script type="text/javascript" src="/ts/custom.388b4c8555b925683490f851d96d246aca608f5b5a471b03653091790c45e904.js" defer></script>
         <script>
     (function () {
         const customFont = document.createElement('link');
